# ecoClassify

./: .coderabbit.yaml  .coderabbit.yml  .dockerignore  .gitignore  .lintr  Dockerfile  README.md  ecoClassify.ssimpkg  generate_ecoclassify_colormaps.R  imageclassifier.ssimpkg  run_unit_tests.R  test-build-library.R  test-build.sh  test-final.R  testing.r
.claude/: settings.local.json
development-guide/: Syncrosim_Technical_Overview.md  guide.md  postprocess-transformer.md  syncrosim-patterns-examples.md  syncrosim-transformer-guide.md
docs/: .gitignore  _config.yml  getting_started.md  index.markdown  index.md  reference.md
docs/_posts/: 2024-10-01-welcome-to-jekyll.markdown
docs/assets/: main.css  main.scss
ecoClassify/: package.xml
example-library/: build-ecoclassify-library.R
imageclassifier/: 1-train-classifier.R  2-forecast.r  2-predict.r  model.R  package.xml  unit-tests.R  watchtower-2.yml  watchtower-conda.yml  watchtower.yml  workspace.r
imageclassifier/tests/: workspace-tests.R
src/: 0-helper-functions.r  0-prepare-spatial-tiling.R  1-train-classifier.R  2-predict.R  2-predict.r  2a-prepare-spatial-tiling.R  3-postprocess.R  copilot-instructions.md  ecoClassify-conda.yml  installDependencies.r  model.R  package.xml  workspace.r
src/functions/: 0.0-setup.r  0.1-pre-processing.r  0.2-training-and-prediction.r  (+6 more)
src/raster-decompose/: Cargo.toml
src/raster-decompose/.cargo/: config.toml
src/raster-decompose/src/: main.rs  raster_functions.rs
testing/: decompose-test.sh  metadata.xml  templateLibraryUpdate.py  testTemplateLibrary.py
(+17 files in other folders)
